@@ -1,5 +1,7 @@
 23 March 2007: Wouter
 	- review of yesterday's commits.
+	- covered up memory leak of the entry locks.
+	- answers from the cache correctly. Copies flags correctly.
 
 22 March 2007: Wouter
 	- AIX configure check.
